package main.java.edu.iu;

public class Physics {
    public double[] calculateAcceleration(Agent agent) {
        return new double[] {};
    }
}
