package main.java.edu.iu;

public class Sensor {
    double range;
    double angularWidth;
    double frequency;

    public double getRange() {
        return range;
    }

    public void setRange(double range) {
        this.range = range;
    }

    public double getAngularWidth() {
        return angularWidth;
    }

    public void setAngularWidth(double angularWidth) {
        this.angularWidth = angularWidth;
    }

    public double getFrequency(double frequency) {
        return frequency;
    }

    public void setFrequency(double frequency) {
        this.frequency = frequency;
    }
}
